Criando o método 'List' & 'Search' no Controller

--- a/1 - Basic/Aula1AspNetMVC/Aula1AspNetMVC/Aula1AspNetMVC.csproj
+++ b/1 - Basic/Aula1AspNetMVC/Aula1AspNetMVC/Aula1AspNetMVC.csproj
@@ -198,6 +198,7 @@
     <Content Include="Service References\Application Insights\ConnectedService.json" />
     <Content Include="Views\Shared\_Saudacao.cshtml" />
     <Content Include="Views\Cliente\Index.cshtml" />
+    <Content Include="Views\Cliente\Lista.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
