Executando o comando: Enable-Migrations no projeto.

--- a/1 - Basic/Aula1AspNetMVC/Aula1AspNetMVC/Aula1AspNetMVC.csproj
+++ b/1 - Basic/Aula1AspNetMVC/Aula1AspNetMVC/Aula1AspNetMVC.csproj
@@ -157,11 +157,13 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Context\Aula1Context.cs" />
     <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Client.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
