Configuração da classe 'Client' no arquivo 'ClientConfig.cs'

--- a/2 - Intermediary/AppEnterprise/src/GL.AppEnterprise.Infra.Data/GL.AppEnterprise.Infra.Data.csproj
+++ b/2 - Intermediary/AppEnterprise/src/GL.AppEnterprise.Infra.Data/GL.AppEnterprise.Infra.Data.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\AppEnterpriseContext.cs" />
+    <Compile Include="EntityConfig\ClientConfig.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
