--- a/2 - Intermediary/AppEnterprise/src/GL.AppEnterprise.Infra.Data/GL.AppEnterprise.Infra.Data.csproj
+++ b/2 - Intermediary/AppEnterprise/src/GL.AppEnterprise.Infra.Data/GL.AppEnterprise.Infra.Data.csproj
@@ -54,6 +54,8 @@
     <Compile Include="EntityConfig\ClientConfig.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ClientRepository.cs" />
+    <Compile Include="Repositories\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -65,6 +67,7 @@
       <Name>GL.AppEnterprise.Domain</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
