Instalando o Dapper na camada de 'Infra'

--- a/2 - Intermediary/AppEnterprise/src/GL.AppEnterprise.UI.Mvc/Web.config
+++ b/2 - Intermediary/AppEnterprise/src/GL.AppEnterprise.UI.Mvc/Web.config
@@ -11,9 +11,7 @@
   <connectionStrings>
    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AppEnterprise.mdf;Initial Catalog=AppEnterprise;Integrated Security=True" 
            providerName="System.Data.SqlClient" />-->
-   <add name="DefaultConnection" 
-         connectionString="Data Source=(LocalDb)\v12.0;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\AppEnterprise.mdf" 
-         providerName="System.Data.SqlClient" />
+   <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v12.0;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\AppEnterprise.mdf" providerName="System.Data.SqlClient" />
   
   </connectionStrings> 
   
