--- a/2 - Intermediary/AppEnterprise/src/GL.AppEnterprise.UI.Mvc/Web.config
+++ b/2 - Intermediary/AppEnterprise/src/GL.AppEnterprise.UI.Mvc/Web.config
@@ -8,10 +8,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AppEnterprise.mdf;Initial Catalog=AppEnterprise;Integrated Security=True" 
-             providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v12.0;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\AppEnterprise.mdf" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AppEnterprise.mdf;Initial Catalog=AppEnterprise;Integrated Security=True" 
+             providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v12.0;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\AppEnterprise.mdf" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 
   <appSettings>
