--- a/2 - Intermediary/AppEnterprise/src/GL.AppEnterprise.UI.Mvc/Web.config
+++ b/2 - Intermediary/AppEnterprise/src/GL.AppEnterprise.UI.Mvc/Web.config
@@ -25,6 +25,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <customErrors mode="On"></customErrors>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
